<resources>
    <string name="app_name">Travilous</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="finish">finish</string>
    <string name="dont_have_an_account_register">Don\'t have an account? Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="full_name">Full name</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="add_a_link">Add a link like http://</string>
    <string name="tag_people">Tag People</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="location">Location</string>
    <string name="category_food">Food</string>
    <string name="category_outdoor">Outdoor</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_shopping">Shopping</string>
    <string name="sub_category_bars">BARS</string>
    <string name="sub_category_roof_tops">ROOF TOPS</string>
    <string name="sub_category_nightclubs">NIGHTCLUBS</string>
    <string name="sub_category_events">EVENTS</string>
    <string name="read_more"><![CDATA["Read more >    "]]></string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="terms_and_conditions_agreement_request">Please Agree to our Terms and Conditions Before \nsigning up.</string>
    <string name="eula">End-User License Agreement (EULA) of Sonder Travel App \nThis End-User License Agreement ("EULA") is a legal agreement between you and Sonder Travel App. This EULA agreement governs your acquisition and use of our Sonder Travel App software ("Software") directly from Sonder Travel App or indirectly through a Sonder Travel App authorized reseller or distributor (a "Reseller").\nPlease read this EULA agreement carefully before completing the installation process and using the Sonder Travel App software. It provides a license to use the Sonder Travel App software and contains warranty information and liability disclaimers.\nIf you register for a free trial of the Sonder Travel App software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the Sonder Travel App software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.\nIf you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.\nThis EULA agreement shall apply only to the Software supplied by Sonder Travel App herewith regardless of whether other software is referred to or described herein. The terms also apply to any Sonder Travel App updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply. This EULA was created by EULA Template for Sonder Travel App.\nLicense Grant
    Sonder Travel App hereby grants you a personal, non-transferable, non-exclusive licence to use the Sonder Travel App software on your devices in accordance with the terms of this EULA agreement.
You are permitted to load the Sonder Travel App software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the Sonder Travel Appsoftware.
You are not permitted to:
•	Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things
•	Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose
•	Allow any third party to use the Software on behalf of or for the benefit of any third party
•	Use the Software in any way which breaches any applicable local, national or international law
•	use the Software for any purpose that Sonder Travel App considers is a breach of this EULA agreement
Intellectual Property and Ownership
Sonder Travel App shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of Sonder Travel App.
Sonder Travel App reserves the right to grant licences to use the Software to third parties.
Termination
This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to Sonder Travel App.
It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.</string>

</resources>
