<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditPostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_bar_gradient"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:paddingStart="10dp">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sign_painter_house_script"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/close"
                     />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/select_location_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/google_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_location"
            android:queryHint="Search..."
            android:iconifiedByDefault="false"
            android:layout_margin="10dp"
            android:elevation="5dp"
            android:background="@drawable/bg_round"/>

        <Button
            android:id="@+id/select_location_button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorBlue"
            android:text="Select"
            android:visibility="gone"
            android:textColor="@android:color/white" />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_added_edit"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_gravity="top"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/update_post"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="15dp"
                    android:background="@color/colorBlue"
                    android:text="Update"
                    android:textColor="@android:color/white" />

                <RatingBar
                    android:id="@+id/ratingBar_edit"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/update_post"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:isIndicator="false"
                    android:max="5"
                    android:progressTint="@color/colorRatingYellow"
                    android:stepSize="1" />

                <io.techery.properratingbar.ProperRatingBar
                    android:id="@+id/priceBar_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ratingBar_edit"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:max="5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:stepSize="1"
                    app:prb_defaultRating="0"
                    app:prb_clickable="true"
                    app:prb_symbolicTick="$"
                    app:prb_symbolicTickNormalColor="@android:color/darker_gray"
                    app:prb_symbolicTickSelectedColor="#8AC448"
                    app:prb_totalTicks="5"
                    />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tag_people_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:text="@string/tag_people"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <TextView
            android:id="@+id/location_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:text="@string/location"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/link_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="Add a link"
            android:background="@drawable/edittext_background"
            android:hint="@string/add_a_link"
            android:inputType="textUri"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/select_category_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="Add a link"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:text="@string/select_category"
            android:textColor="@color/colorWhite"/>

        <Spinner
            android:id="@+id/select_sub_category_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:hint="@string/select_sub_category"
            android:textColor="@color/colorWhite" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_background"
            android:gravity="top"
            android:hint="Caption..."
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>