<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:id="@+id/post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:text="POST"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                android:layout_margin="10dp"
                android:id="@+id/image_added"/>

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/done"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorBlue"
                    android:text="Done"
                    android:textColor="@android:color/white" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/done"
                    android:layout_alignParentEnd="true"
                    android:max="5"
                    android:progressTint="@color/colorRatingYellow"
                    android:stepSize="1" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:text="@string/tag_people"
            android:padding="5dp"
            android:id="@+id/tag_people"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:hint=" Location"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:id="@+id/location"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:hint="@string/add_a_link"
            android:inputType="textUri"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:id="@+id/add_link"
            android:autofillHints="Add a link" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:padding="5dp"
            android:text="@string/select_category"
            android:layout_marginTop="15dp"
            android:id="@+id/select_category"
            android:autofillHints="Add a link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:hint="@string/select_sub_category"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:id="@+id/select_sub_category"
            android:autofillHints="Add a link" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:hint="Caption..."
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:id="@+id/description"/>

    </LinearLayout>
</LinearLayout>